[package]
name = "libp2p_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15", features = ["full", "net", "io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
libp2p = { version = "0.52.3", features = ["async-std", "cbor", "dns", "kad", "noise", "tokio", "macros", "request-response", "tcp", "websocket", "yamux", "mdns", "gossipsub", "quic", "rsa"] }
serde = { version = "1.0.188", features = ["derive"] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3.28"
void = "1.0.2"
either = "1.9"
clap = { version = "4.4.4", features = ["derive"] }
tokio-stream = "0.1.14"
serde_json = "1.0.108"
ark-std = "0.4.0"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-poly = "0.4.2"
ark-crypto-primitives = "0.4.0"
rand_chacha = "0.3.1"
ark-r1cs-std = "0.4.0"
ark-bls12-381 = "0.4.0"